2025-09-23T12:27:50Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17946156465 # 1240
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 17 35
* notice: prev accum: outdated-unq outdated-all / unq all: 2938 5321 / 2970 5357
* notice: next accum: outdated-unq outdated-all / unq all: 2939 5322 / 2970 5357
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-09-09] / []

2025-09-23T01:02:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17932775625 # 1239
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
* notice: last 14d: unq all: 17 36
* notice: prev accum: outdated-unq outdated-all / unq all: 2938 5321 / 2967 5354
* notice: next accum: outdated-unq outdated-all / unq all: 2938 5321 / 2970 5357
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +4 +4 -0 -0 / 4 4
* notice: removed / changed dates: [] / [2025-09-22]

2025-09-22T12:28:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17915276556 # 1238
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-22
* notice: last 14d: unq all: 15 33
* notice: prev accum: outdated-unq outdated-all / unq all: 2936 5319 / 2966 5353
* notice: next accum: outdated-unq outdated-all / unq all: 2938 5321 / 2967 5354
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-09-08] / [2025-09-22]

2025-09-21T01:09:46Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17887065439 # 1235