@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-09-23T12:27:50Z",
+  "timestamp" : "2025-09-24T12:28:32Z",
   "count_outdated" : 5322,
   "uniques_outdated" : 2939,
-  "count" : 5357,
-  "uniques" : 2970,
+  "count" : 5361,
+  "uniques" : 2973,
   "clones" : [
     {
       "timestamp": "2025-09-10T00:00:00Z",
-      "count": 10,
+      "count": 8,
       "count_minmax": [ 1, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 9,
+      "count_decinc": [ 2, 10 ],
+      "uniques": 7,
       "uniques_minmax": [ 1, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "uniques_decinc": [ 2, 9 ]
     },
     {
       "timestamp": "2025-09-11T00:00:00Z",
@@ -103,6 +103,15 @@
       "uniques": 4,
       "uniques_minmax": [ 1, 4 ],
       "uniques_decinc": [ 0, 4 ]
+    },
+    {
+      "timestamp": "2025-09-24T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
