@@ -1,11 +1,11 @@
 {
-  "count": 35,
-  "uniques": 17,
+  "count": 37,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2025-09-10T00:00:00Z",
-      "count": 10,
-      "uniques": 9
+      "count": 8,
+      "uniques": 7
     },
     {
       "timestamp": "2025-09-11T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2025-09-22T00:00:00Z",
       "count": 4,
       "uniques": 4
+    },
+    {
+      "timestamp": "2025-09-24T00:00:00Z",
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
