@@ -1,3 +1,12 @@
+2025-09-24T12:28:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17976657371 # 1242
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-24
+* notice: last 14d: unq all: 19 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 2939 5322 / 2970 5357
+* notice: next accum: outdated-unq outdated-all / unq all: 2939 5322 / 2973 5361
+* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -2 -2 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [] / [2025-09-10 2025-09-24]
+
 2025-09-23T12:27:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/17946156465 # 1240
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-23
